--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [cities[0]['']], 'y': [cities[0]['area'], cities[1]['area'], cities[2]['area']], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [cities[0]['City'], citi], 'y': [cities[0]['area'], cities[1]['area'], cities[2]['area']], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
